Closed Bug 254053 Opened 21 years ago Closed 21 years ago

CSS rendered differently when linked as alternate stylesheet

Categories

(Core :: Layout: Tables, defect)

x86
All
defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: berna.bleeker, Assigned: bernd_mozilla)

References

()

Details

(Keywords: testcase)

Attachments

(3 files, 1 obsolete file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7) Gecko/20040707 Firefox/0.9.2 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7) Gecko/20040707 Firefox/0.9.2 The same stylesheet is rendered differently when it's linked as an alternate stylesheet. (I've noticed it only with table borders, so far.) See the URL for an illustration. Reproducible: Always Steps to Reproduce: 1. Make an HTML file with a table. 2. Link 2 stylesheets to it, like this: <link rel="stylesheet" type="text/css" title="orange" href="orange.css"> <link rel="alternate stylesheet" type="text/css" title="red" href="red.css"> 3. Load the page. Choose the alternate stylesheet with the button on the status bar. See what happens. 4. Copy the HTML file. 5. Link the same 2 stylesheets to it, but in reverse order, like this: <link rel="stylesheet" type="text/css" title="red" href="red.css"> <link rel="alternate stylesheet" type="text/css" title="orange" href="orange.css"> 6. Load the page. Choose the alternate stylesheet with the button on the status bar. See what happens. Actual Results: The same table with the same CSS is rendered differently when the CSS is linked as an alternate stylesheet. Expected Results: The page should be rendered the same when the CSS is linked as an alternate stylesheet. I'm using the Pinball theme.
Assignee: firefox → dbaron
Component: General → Style System (CSS)
Product: Firefox → Browser
QA Contact: firefox.general → ian
Version: unspecified → 1.7 Branch
When I use the standard theme or Noia, I can't see the bug because I can't choose an alternate stylesheet--the status bar icon isn't there!
Version: 1.7 Branch → 1.0 Branch
Version: 1.0 Branch → Other Branch
No, you don't get the stylesheet switcher when you're on a frameset containing the page with the alternate stylesheets. Changing URL appropriately. Also, what's wrong? It looks fine to me.
URL: http://www.volksliedjes.nl/CSS bug/CS...http://www.xs4all.nl/~bslikker/CSS%20...
1. Sorry, I hadn't realized the redirection service puts my page in a frame. 2. Yes, the test pages look OK when they're first loaded; the problem occurs when you switch stylesheets. I've updated the explanation on the pages to (hopefully) make them more clear. The problem still occurs in 0.9.3.
Over to tables; that looks like incremental reflow problems with collapsed borders.
Assignee: dbaron → nobody
Component: Style System (CSS) → Layout: Tables
QA Contact: ian → core.layout.tables
Blocks: 258166
Attached file testcase stylesheet
stylesheet for testcase
Attached file testcase (obsolete) —
this loads the previous attachment as the default stylesheet and then uses DOM to switch the styles. The effect is similar to what happens when switching style sheets. there should be an inner black 1px dotted border and an outer solid 1px red border. with linux trunk 2004090707, the red border is only on the top, left and right. the black border is only on the bottom and is 4 pixels.
Comment on attachment 158167 [details] testcase this appears to be a different bug. This testcase renders ok until very recently, while the original testcase had problems all the way back to 1.0. I filed bug 258377 for this testcase.
Attachment #158167 - Attachment is obsolete: true
Attachment #158167 - Attachment mime type: text/plain → text/html
Attached file tescase
testcase with two stylesheets via data: urls. orange is: "table { border-collapse: collapse; border-bottom: 4px solid; }" red is: "table { border: red 1px dotted; }" after switching to the red stylesheet, Mozilla displays only a bottom border as a think red dotted line.
confirmed with linux trunk 2004090707
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: testcase
OS: Windows XP → All
Version: Other Branch → Trunk
I believe we do not reframe, but we should.
Blocks: 258377
Assignee: nobody → bernd_mozilla
note: the comments there should be updated before checkin
fix checked in
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
*** Bug 258166 has been marked as a duplicate of this bug. ***
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: