changing the border-collapse mode needs to cause a reframe as we have two different types of cellframes depending on the mode, bug 254053 idea=bz, r/sr=dbaron